# cpp-jumpstart

./: .gitignore  CMakeLists.txt  setup_jumpstart.sh
cmake/: code-coverage.cmake  jumpstart-config.cmake.in
example/: CMakeLists.txt  example1.cpp
test/: CMakeLists.txt  DummyTest.cpp
